k8s/rabbitmq/rabbitmq-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-management-route
  namespace: rabbitmq
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rabbitmq.synthia.tech`)
    kind: Rule
    middlewares:
    - name: admin-basic-auth-middleware
      namespace: traefik
    - name: default-rate-limit-middleware
      namespace: default
    services:
    - name: rabbitmq-management-srv
      namespace: rabbitmq
      kind: Service
      port: 15672
  tls:
    secretName: rabbitmq-tls-secret
    domains: 
    - main: rabbitmq.synthia.tech
